Fix unscrollable filters
The fix for filters overflowing the map content to the right was causing another problem - filters became unscrollable, which is very much needed on mobile.

--- a/app/assets/stylesheets/global/global.css.scss
+++ b/app/assets/stylesheets/global/global.css.scss
@@ -22,7 +22,6 @@ body {
 
 main {
   z-index: 0;
-  overflow: hidden;
 }
 
 strong,
