--- a/app/assets/stylesheets/modules/map.css.scss
+++ b/app/assets/stylesheets/modules/map.css.scss
@@ -1,5 +1,5 @@
 .maps-page-container {
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 
   @media screen and (min-width: $small-desktop-min) {
